IndividualPage added to database. Also figured out read onCreate. Also reference Calender Code

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalWithDB">
         <activity
+            android:name=".PopUpForIndividual"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.CustomTheme" />
+
+        <activity
             android:name=".PopUpForStudentlist"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat.CustomTheme"/>
+            android:theme="@style/Theme.AppCompat.CustomTheme" />
         <activity
             android:name=".PopUpForClasslist"
             android:exported="false"
